--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,9 +12,8 @@ jobs:
           name: Print the Current Time
           command: date
 
-        -run: |
-          apt-get update
-          apt-get install aegisub
-          autoreconf
-          ./configure
-          make
+        -run: apt-get update
+        -run: apt-get install aegisub autotools 
+        -run: autoreconf
+        -run: ./configure
+        -run: make
